# solidity_plonk_verifier

./: .gitignore  Cargo.toml  README.md  Verifier.sol  block_proof_20_keccak.proof  block_vk_20_keccak.key  errorcodes.py  run-tests.sh  selector_optimized_vk_keccak.key  vk_17.key
.github/workflows/: cargo-license.yaml  solidity_verifier_generator.yml
bellman_vk_codegen/: .gitignore  Cargo.toml  deposit_vk.key  template.sol  verifier.sol
bellman_vk_codegen/src/: lib.rs
bellman_vk_codegen_recursive/: .gitignore  Cargo.toml  resursive.sol  template.sol
bellman_vk_codegen_recursive/src/: lib.rs
codegen/: Cargo.toml
codegen-bin/: Cargo.toml
codegen-bin/src/: main.rs
codegen/src/: circuits.rs  generate.rs  lib.rs  serialize.rs  tests.rs
codegen/template/: PairingsBn254.sol  Plonk4VerifierWithAccessToDNext.sol  UncheckedMath.sol  Verifier.sol  verifier.sol
contracts/: Verifier.sol
data/: example.json  example.proof
data/optimized/: selector_optimized_proof_keccak.proof  selector_optimized_vk_keccak.key  selector_optimized_with_lookup_proof_keccak.proof  selector_optimized_with_lookup_vk_keccak.key  selector_optimized_with_rescue_proof_keccak.proof  selector_optimized_with_rescue_vk_keccak.key
data/std/: width4_proof_keccak.proof  width4_vk_keccak.key  width4_with_lookup_and_rescue_proof_keccak.proof  width4_with_lookup_and_rescue_vk_keccak.key  width4_with_lookup_proof_keccak.proof  width4_with_lookup_vk_keccak.key  width4_with_rescue_proof_keccak.proof  width4_with_rescue_vk_keccak.key
hardhat/: .solhint.json  hardhat.config.ts  package.json  tsconfig.json
hardhat/contracts/: Pairing.sol  PairingsBn254.sol  Plonk4VerifierWithAccessToDNext.sol  Transcript.sol  TranscriptLib.sol  VerificationKey.sol  Verifier.sol
hardhat/test/: proof_verify.ts  utils.ts
src/: lib.rs  main.rs
template/: verifier.sol
