[package]
name = "bellman_vk_codegen"
version = "0.1.0"
authors = ["Alex Vlasov <alex.m.vlasov@gmail.com>"]
edition = "2018"

[dependencies]
# bellman = { package = "bellman_ce", git = "https://github.com/matter-labs/bellman", branch = "circuit_description" }
bellman = { package = "bellman_ce", path = "../../bellman" }
# recursive_aggregation_circuit = {git = "https://github.com/matter-labs/recursive_aggregation_circuit"}
recursive_aggregation_circuit = {path = "../../recursive_aggregation_circuit"}

handlebars = "3.*"
hex = "*"
serde_json = "1.*"
web3 = {version = "0.8.*", default_features = false }