[package]
name = "codegen"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handlebars = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
# franklin_crypto = {package = "franklin-crypto", path = "../../../matter-labs/franklin-crypto"}
# rescue_poseidon = {package = "rescue_poseidon", path = "../../../matter-labs/rescue-poseidon"}

franklin-crypto = {features = ["plonk"], git = "https://github.com/matter-labs/franklin-crypto", branch = "dev"}
rescue-poseidon = {package = "rescue_poseidon", git = "https://github.com/matter-labs/rescue-poseidon"}

hex = "*"   
paste = "1.0"
ethereum-types = "0.12"
