[package]
name = "codegen"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handlebars = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
# franklin_crypto = {package = "franklin-crypto", path = "../../../matter-labs/franklin-crypto"}
# rescue_poseidon = {package = "rescue_poseidon", path = "../../../matter-labs/rescue-poseidon"}

franklin-crypto = {features = ["plonk"], git = "https://github.com/matter-labs/franklin-crypto", branch = "snark_wrapper"}
rescue-poseidon = {package = "rescue_poseidon", git = "https://github.com/matter-labs/rescue-poseidon", branch = "poseidon2"}

hex = "*"   
paste = "1.0"
ethereum-types = "=0.14.1"
